--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "homepages",
-  "version": "0.1.0",
+  "name": "homepages-frontend",
+  "version": "1.0.0",
+  "description": "Ville Saarinen home page's frontend",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
