--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "1.0.0",
   "description": "Ville Saarinen home page's root",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "cd ./frontend/ && npm run build && mv -f ./build/ ../backend/",
+    "start:front": "cd ./frontend/ && npm start",
+    "start:back-prod": "cd ./backend/ && npm run start:prod",
+    "start:back-dev": "cd ./backend/ && npm run start:dev",
+    "start:back-test": "cd ./backend/ && npm run start:test",
+    "start:full-prod": "npm run build && npm run start:back-prod",
+    "start:full-dev": "concurrently \"npm:start:front\" \"npm:start:back-dev\"",
+    "start:full:test": "concurrently \"npm:start:front\" \"npm:start:back-test\"",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "test": "TODO: all tests"
   },
   "repository": {
     "type": "git",
@@ -18,6 +26,7 @@
   },
   "homepage": "https://github.com/vikidi/Homepages#readme",
   "devDependencies": {
+    "concurrently": "^5.3.0",
     "eslint": "^7.15.0"
   }
 }
