Frontend: styleguidist setup

--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "build": "cd ./frontend/ && npm run build && mv -f ./build/ ../backend/",
     "start:front": "cd ./frontend/ && npm start",
+    "start:front-style": "cd ./frontend/ && npm run styleguidist:server",
+    "start:front-dev": "concurrently \"npm:start:front\" \"npm:start:front-style\"",
     "start:back-prod": "cd ./backend/ && npm run start:prod",
     "start:back-dev": "cd ./backend/ && npm run start:dev",
     "start:back-test": "cd ./backend/ && npm run start:test",
     "start:full-prod": "npm run build && npm run start:back-prod",
-    "start:full-dev": "concurrently \"npm:start:front\" \"npm:start:back-dev\"",
+    "start:full-dev": "concurrently \"npm:start:front\" \"npm:start:front-style\" \"npm:start:back-dev\"",
     "start:full:test": "concurrently \"npm:start:front\" \"npm:start:back-test\"",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
