--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "styleguidist:server": "npx styleguidist server",
-    "styleguidist:build": "npx styleguidist build"
+    "styleguidist:build": "npx styleguidist build",
+    "test": "cross-env CI=true react-scripts test",
+    "test:coverage": "rm -rf ./coverage && mkdir coverage && cross-env CI=true react-scripts test \"--coverage\"",
+    "test:coveralls": "cat ./coverage/lcov.info | coveralls"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "react-styleguidist": "^11.1.5"
   }
 }
