--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
+    "eslint-plugin-cypress": "^2.11.2",
     "http-proxy-middleware": "^1.0.6",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -22,7 +23,9 @@
     "styleguidist:build": "npx styleguidist build",
     "test": "cross-env CI=true react-scripts test",
     "test:coverage": "rm -rf ./coverage && mkdir coverage && cross-env CI=true react-scripts test \"--coverage\"",
-    "test:coveralls": "cat ./coverage/lcov.info | coveralls"
+    "test:coveralls": "cat ./coverage/lcov.info | coveralls",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run --config video=false"
   },
   "eslintConfig": {
     "extends": [
@@ -43,7 +46,9 @@
     ]
   },
   "devDependencies": {
+    "coveralls": "^3.1.0",
     "cross-env": "^7.0.3",
+    "cypress": "^6.1.0",
     "react-styleguidist": "^11.1.5"
   }
 }
