--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "start:full:test": "concurrently \"npm:start:front\" \"npm:start:back-test\"",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "TODO: all tests"
+    "test:cypress-run": "cd ./frontend/ && npm run cypress:run",
+    "test:e2e": "start-server-and-test start:back-test http://localhost:8080/api/users start:front http://localhost:3000 test:cypress-run"
   },
   "repository": {
     "type": "git",
@@ -30,5 +31,8 @@
   "devDependencies": {
     "concurrently": "^5.3.0",
     "eslint": "^7.15.0"
+  },
+  "dependencies": {
+    "start-server-and-test": "^1.11.6"
   }
 }
