--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "start:full:test": "concurrently \"npm:start:front\" \"npm:start:back-test\"",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
+    "test:back": "cd ./backend/ && npm test",
+    "test:front": "cd ./frontend/ && npm test",
+    "test:unit-n-integration": "npm run test:back && npm run test:front", 
     "test:cypress-run": "cd ./frontend/ && npm run cypress:run",
-    "test:e2e": "start-server-and-test start:back-test http://localhost:8080/api/users start:front http://localhost:3000 test:cypress-run"
+    "test:e2e": "start-server-and-test start:back-test http://localhost:8080/api/users start:front http://localhost:3000 test:cypress-run",
+    "test:full": "npm run test:unit-n-integration && npm run test:e2e"
   },
   "repository": {
     "type": "git",
