--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,9 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
+    "eslint-plugin-cypress": "^2.11.2",
+    "http-proxy-middleware": "^1.0.6",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
@@ -15,8 +18,14 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "styleguidist:server": "npx styleguidist server",
+    "styleguidist:build": "npx styleguidist build",
+    "test": "cross-env CI=true react-scripts test",
+    "test:coverage": "rm -rf ./coverage && mkdir coverage && cross-env CI=true react-scripts test \"--coverage\"",
+    "test:coveralls": "cat ./coverage/lcov.info | coveralls",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run --config video=false"
   },
   "eslintConfig": {
     "extends": [
@@ -35,5 +44,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "coveralls": "^3.1.0",
+    "cross-env": "^7.0.3",
+    "cypress": "^6.1.0",
+    "react-styleguidist": "^11.1.5"
   }
 }
