--- a/package.json
+++ b/package.json
@@ -3,9 +3,24 @@
   "version": "1.0.0",
   "description": "Ville Saarinen home page's root",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "cd ./frontend/ && npm run build && mv -f ./build/ ../backend/",
+    "start:front": "cd ./frontend/ && npm start",
+    "start:front-style": "cd ./frontend/ && npm run styleguidist:server",
+    "start:front-dev": "concurrently \"npm:start:front\" \"npm:start:front-style\"",
+    "start:back-prod": "cd ./backend/ && npm run start:prod",
+    "start:back-dev": "cd ./backend/ && npm run start:dev",
+    "start:back-test": "cd ./backend/ && npm run start:test",
+    "start:full-prod": "npm run build && npm run start:back-prod",
+    "start:full-dev": "concurrently \"npm:start:front\" \"npm:start:front-style\" \"npm:start:back-dev\"",
+    "start:full:test": "concurrently \"npm:start:front\" \"npm:start:back-test\"",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "test:back": "cd ./backend/ && npm test",
+    "test:front": "cd ./frontend/ && npm test",
+    "test:unit-n-integration": "npm run test:back && npm run test:front", 
+    "test:cypress-run": "cd ./frontend/ && npm run cypress:run",
+    "test:e2e": "start-server-and-test start:back-test http://localhost:8080/api/users start:front http://localhost:3000 test:cypress-run",
+    "test:full": "npm run test:unit-n-integration && npm run test:e2e"
   },
   "repository": {
     "type": "git",
@@ -18,6 +33,10 @@
   },
   "homepage": "https://github.com/vikidi/Homepages#readme",
   "devDependencies": {
+    "concurrently": "^5.3.0",
     "eslint": "^7.15.0"
+  },
+  "dependencies": {
+    "start-server-and-test": "^1.11.6"
   }
 }
