--- a/.github/workflows/fullTest.yml
+++ b/.github/workflows/fullTest.yml
@@ -5,7 +5,7 @@ name: Full Test
 
 on:
   push:
-    branches: [ development, main, release ]
+    branches: [ main, release ]
   pull_request:
     branches: [ development, main, release ]
 
