--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "install:front": "cd ./frontend/ && npm ci",
     "install:back": "cd ./backend/ && npm ci",
     "build": "cd ./frontend/ && npm run build && mv -f ./build/ ../backend/",
+    "dependency:check": "depcheck",
     "start:front": "cd ./frontend/ && npm start",
     "start:front-style": "cd ./frontend/ && npm run styleguidist:server",
     "start:front-dev": "concurrently \"npm:start:front\" \"npm:start:front-style\"",
@@ -19,7 +20,7 @@
     "lint:fix": "eslint . --fix",
     "test:back": "cd ./backend/ && npm test",
     "test:front": "cd ./frontend/ && npm test",
-    "test:unit-n-integration": "npm run test:back && npm run test:front", 
+    "test:unit-n-integration": "npm run test:back && npm run test:front",
     "test:cypress-run": "cd ./frontend/ && npm run cypress:run",
     "test:e2e": "start-server-and-test start:back-test http://localhost:8080/api/users start:front http://localhost:3000 test:cypress-run",
     "test:full": "npm run test:unit-n-integration && npm run test:e2e"
@@ -36,6 +37,7 @@
   "homepage": "https://github.com/vikidi/Homepages#readme",
   "devDependencies": {
     "concurrently": "5.3.0",
+    "depcheck": "^1.3.1",
     "eslint": "7.15.0"
   },
   "dependencies": {
