--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "test:unit-n-integration": "npm run test:back && npm run test:front",
     "test:cypress-run": "cd ./frontend/ && npm run cypress:run",
     "test:e2e": "start-server-and-test start:back-test http://localhost:8080/api/users start:front http://localhost:3000 test:cypress-run",
-    "test:full": "npm run test:unit-n-integration && npm run test:e2e"
+    "test:full": "npm run test:unit-n-integration && npm run test:e2e",
+    "test:codecov": "echo \"NOT SET UP!\""
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,7 @@
   },
   "homepage": "https://github.com/vikidi/Homepages#readme",
   "devDependencies": {
+    "codecov": "^3.8.1",
     "concurrently": "5.3.0",
     "depcheck": "^1.3.1",
     "eslint": "7.15.0"
