--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test:back": "cd ./backend/ && npm test",
+    "test:back-cov": "cd ./backend/ && npm test:coverage",
     "test:front": "cd ./frontend/ && npm test",
+    "test:front-cov": "cd ./frontend/ && npm test:coverage",
     "test:unit-n-integration": "npm run test:back && npm run test:front",
+    "test:unit-n-integration-cov": "npm run test:back-cov && npm run test:front-cov",
     "test:cypress-run": "cd ./frontend/ && npm run cypress:run",
     "test:e2e": "start-server-and-test start:back-test http://localhost:8080/api/users start:front http://localhost:3000 test:cypress-run",
     "test:full": "npm run test:unit-n-integration && npm run test:e2e",
+    "test:full-cov": "npm run test:unit-n-integration-cov && npm run test:e2e",
     "test:codecov": "echo \"NOT SET UP!\""
   },
   "repository": {
