--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test:back": "cd ./backend/ && npm test",
-    "test:back-cov": "cd ./backend/ && npm test:coverage",
+    "test:back-cov": "cd ./backend/ && npm run test:coverage",
     "test:front": "cd ./frontend/ && npm test",
-    "test:front-cov": "cd ./frontend/ && npm test:coverage",
+    "test:front-cov": "cd ./frontend/ && npm run test:coverage",
     "test:unit-n-integration": "npm run test:back && npm run test:front",
     "test:unit-n-integration-cov": "npm run test:back-cov && npm run test:front-cov",
     "test:cypress-run": "cd ./frontend/ && npm run cypress:run",
