--- a/backend/package.json
+++ b/backend/package.json
@@ -10,19 +10,17 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand --forceExit --detectOpenHandles",
-    "test:coverage": "rm -rf coverage && mkdir coverage && cross-env NODE_ENV=test jest --coverage --verbose --runInBand --forceExit --detectOpenHandles --no-color 2>./coverage/jest-result.txt",
-    "test:coveralls": "cat ./coverage/lcov.info | coveralls"
+    "test:coverage": "rm -rf coverage && mkdir coverage && cross-env NODE_ENV=test jest --coverage --verbose --runInBand --forceExit --detectOpenHandles"
   },
   "author": "Ville Saarinen",
   "license": "MIT",
   "devDependencies": {
-    "coveralls": "3.1.0",
-    "cross-env": "7.0.2",
-    "eslint": "7.11.0",
-    "jest": "26.6.0",
+    "cross-env": "7.0.3",
+    "eslint": "7.15.0",
+    "jest": "26.6.3",
     "jest-extended": "0.11.5",
     "nodemon": "2.0.6",
-    "supertest": "5.0.0"
+    "supertest": "6.0.1"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
