--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,16 +4,16 @@
   "description": "Ville Saarinen home page's frontend",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.1.2",
-    "@testing-library/user-event": "^12.2.2",
-    "eslint-plugin-cypress": "^2.11.2",
-    "http-proxy-middleware": "^1.0.6",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "@testing-library/jest-dom": "5.11.6",
+    "@testing-library/user-event": "12.6.0",
+    "@testing-library/react": "11.2.2",
+    "eslint-plugin-cypress": "2.11.2",
+    "http-proxy-middleware": "1.0.6",
+    "prop-types": "15.7.2",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-scripts": "4.0.1",
+    "web-vitals": "1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -23,7 +23,6 @@
     "styleguidist:build": "npx styleguidist build",
     "test": "cross-env CI=true react-scripts test",
     "test:coverage": "rm -rf ./coverage && mkdir coverage && cross-env CI=true react-scripts test \"--coverage\"",
-    "test:coveralls": "cat ./coverage/lcov.info | coveralls",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run --config video=false"
   },
@@ -46,9 +45,8 @@
     ]
   },
   "devDependencies": {
-    "coveralls": "^3.1.0",
-    "cross-env": "^7.0.3",
-    "cypress": "^6.1.0",
-    "react-styleguidist": "^11.1.5"
+    "cross-env": "7.0.3",
+    "cypress": "6.1.0",
+    "react-styleguidist": "11.1.5"
   }
 }
