--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,14 +5,18 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "5.11.6",
-    "@testing-library/user-event": "12.6.0",
     "@testing-library/react": "11.2.2",
+    "@testing-library/user-event": "12.6.0",
     "eslint-plugin-cypress": "2.11.2",
     "http-proxy-middleware": "1.0.6",
     "prop-types": "15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "1.0.1"
   },
   "scripts": {
