--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,14 +4,19 @@
   "description": "Ville Saarinen home page's frontend",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "5.11.6",
     "@testing-library/react": "11.2.2",
     "@testing-library/user-event": "12.6.0",
     "eslint-plugin-cypress": "2.11.2",
     "http-proxy-middleware": "1.0.6",
+    "i18next": "^19.8.4",
+    "i18next-http-backend": "^1.0.21",
     "prop-types": "15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-i18next": "^11.8.4",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
