--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "11.2.2",
     "@testing-library/user-event": "12.6.0",
     "eslint-plugin-cypress": "2.11.2",
+    "history": "^5.0.0",
     "http-proxy-middleware": "1.0.6",
     "i18next": "^19.8.4",
     "i18next-http-backend": "^1.0.21",
@@ -18,7 +19,9 @@
     "react-dom": "17.0.1",
     "react-i18next": "^11.8.4",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-spinners": "^0.9.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
