--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "styleguidist:server": "npx styleguidist server",
+    "styleguidist:server": "cross-env FAST_REFRESH=false styleguidist server",
     "styleguidist:build": "npx styleguidist build",
     "test": "cross-env CI=true react-scripts test",
     "test:coverage": "rm -rf ./coverage && mkdir coverage && cross-env CI=true react-scripts test \"--coverage\"",
