--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,22 +4,34 @@
   "description": "Ville Saarinen home page's frontend",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "5.11.6",
-    "@testing-library/user-event": "12.6.0",
     "@testing-library/react": "11.2.2",
+    "@testing-library/user-event": "12.6.0",
     "eslint-plugin-cypress": "2.11.2",
+    "history": "^5.0.0",
     "http-proxy-middleware": "1.0.6",
+    "i18next": "^19.8.4",
+    "i18next-http-backend": "^1.0.21",
     "prop-types": "15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-i18next": "^11.8.4",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-spinners": "^0.9.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "styleguidist:server": "npx styleguidist server",
+    "styleguidist:server": "cross-env FAST_REFRESH=false styleguidist server",
     "styleguidist:build": "npx styleguidist build",
     "test": "cross-env CI=true react-scripts test",
     "test:coverage": "rm -rf ./coverage && mkdir coverage && cross-env CI=true react-scripts test \"--coverage\"",
