--- a/backend/package.json
+++ b/backend/package.json
@@ -4,25 +4,23 @@
   "description": "Ville Saarinen home page's backend",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production pm2 start index.js",
-    "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "start:test": "cross-env NODE_ENV=test nodemon index.js",
+    "start:prod": "cross-env NODE_ENV=production pm2 start index.js",
+    "start:dev": "cross-env NODE_ENV=development nodemon index.js",
+    "start:test": "cross-env NODE_ENV=test RESET_DB=true nodemon index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand --forceExit --detectOpenHandles",
-    "test:coverage": "cross-env NODE_ENV=test jest --coverage --verbose --runInBand --forceExit --detectOpenHandles",
-    "test:coveralls": "cross-env NODE_ENV=test jest --coverage --verbose --runInBand --forceExit --detectOpenHandles && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage"
+    "test:coverage": "rm -rf coverage && mkdir coverage && cross-env NODE_ENV=test jest --coverage --verbose --runInBand --forceExit --detectOpenHandles"
   },
   "author": "Ville Saarinen",
   "license": "MIT",
   "devDependencies": {
-    "coveralls": "3.1.0",
-    "cross-env": "7.0.2",
-    "eslint": "7.11.0",
-    "jest": "26.6.0",
+    "cross-env": "7.0.3",
+    "eslint": "7.15.0",
+    "jest": "26.6.3",
     "jest-extended": "0.11.5",
     "nodemon": "2.0.6",
-    "supertest": "5.0.0"
+    "supertest": "6.0.1"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
