--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,19 +4,39 @@
   "description": "Ville Saarinen home page's frontend",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.1.2",
-    "@testing-library/user-event": "^12.2.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "@material-ui/core": "4.11.2",
+    "@material-ui/icons": "4.11.2",
+    "@testing-library/jest-dom": "5.11.6",
+    "@testing-library/react": "11.2.2",
+    "@testing-library/user-event": "12.6.0",
+    "eslint-plugin-cypress": "2.11.2",
+    "history": "5.0.0",
+    "http-proxy-middleware": "1.0.6",
+    "i18next": "19.8.4",
+    "i18next-http-backend": "1.0.21",
+    "prop-types": "15.7.2",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-i18next": "11.8.4",
+    "react-redux": "7.2.2",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "4.0.1",
+    "react-spinners": "0.9.0",
+    "redux": "4.0.5",
+    "redux-devtools-extension": "2.13.8",
+    "redux-thunk": "2.3.0",
+    "web-vitals": "1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "styleguidist:server": "cross-env FAST_REFRESH=false styleguidist server",
+    "styleguidist:build": "npx styleguidist build",
+    "test": "cross-env CI=true react-scripts test",
+    "test:coverage": "rm -rf ./coverage && mkdir coverage && cross-env CI=true react-scripts test \"--coverage\"",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run --config video=false"
   },
   "eslintConfig": {
     "extends": [
@@ -35,5 +55,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cross-env": "7.0.3",
+    "cypress": "6.1.0",
+    "react-styleguidist": "11.1.5"
   }
 }
