--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
     "react-spinners": "0.9.0",
+    "react-typist": "^2.0.5",
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.8",
     "redux-thunk": "2.3.0",
