--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,14 +14,16 @@
     "http-proxy-middleware": "1.0.6",
     "i18next": "19.8.4",
     "i18next-http-backend": "1.0.21",
+    "material-ui-image": "^3.3.1",
     "prop-types": "15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-i18next": "11.8.4",
+    "react-loadingg": "^1.7.2",
     "react-redux": "7.2.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
-    "react-spinners": "0.9.0",
+    "react-typist": "^2.0.5",
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.8",
     "redux-thunk": "2.3.0",
