--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:prod": "cross-env NODE_ENV=production pm2 start index.js",
+    "start:prod-test": "cross-env NODE_ENV=production nodemon index.js",
     "start:dev": "cross-env NODE_ENV=development nodemon index.js",
     "start:test": "cross-env NODE_ENV=test RESET_DB=true nodemon index.js",
     "lint": "eslint .",
