--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "cross-env INLINE_RUNTIME_CHUNK=false react-scripts build",
     "eject": "react-scripts eject",
     "styleguidist:server": "cross-env FAST_REFRESH=false styleguidist server",
     "styleguidist:build": "npx styleguidist build",
