--- a/.github/workflows/fullTest.yml
+++ b/.github/workflows/fullTest.yml
@@ -5,18 +5,18 @@ name: Full Test
 
 on:
   push:
-    branches: [ main, release ]
+    branches: [ main ]
   pull_request:
-    branches: [ development, main, release ]
+    branches: [ development, main ]
 
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [14.x, 15.x]
         mongodb-version: [4.2]
 
     steps:
