--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "4.11.3",
     "@material-ui/icons": "4.11.2",
+    "@react-three/cannon": "^0.5.4",
     "@react-three/drei": "^3.4.1",
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.5",
@@ -29,7 +30,7 @@
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.8",
     "redux-thunk": "2.3.0",
-    "three": "^0.125.2",
+    "three": "0.124.0",
     "web-vitals": "1.1.0"
   },
   "scripts": {
