Airbrake package and update logger to log only dev

--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "supertest": "6.1.3"
   },
   "dependencies": {
+    "@airbrake/node": "^2.1.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
