--- a/.github/workflows/fullTest.yml
+++ b/.github/workflows/fullTest.yml
@@ -7,7 +7,7 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ development, main ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -16,8 +16,8 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 15.x]
-        mongodb-version: [4.2]
+        node-version: [14.x]
+        mongodb-version: [4.4]
 
     steps:
     - name: Git checkout
