--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.5",
     "@testing-library/user-event": "12.8.3",
+    "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "eslint-plugin-cypress": "2.11.2",
     "gsap": "3.6.0",
@@ -30,6 +31,7 @@
     "react-typist": "2.0.5",
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.9",
+    "redux-form": "^8.3.7",
     "redux-thunk": "2.3.0",
     "three": "0.124.0",
     "web-vitals": "1.1.1"
