--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test:unit-n-integration": "npm run test:back && npm run test:front",
     "test:unit-n-integration-cov": "npm run test:back-cov && npm run test:front-cov",
     "test:cypress-run": "cd ./frontend/ && npm run cypress:run",
-    "test:e2e": "start-server-and-test start:back-test http://localhost:8080/api/users start:front http://localhost:3000 test:cypress-run",
+    "test:e2e": "start-server-and-test start:back-test http://localhost:8080/heartbeat start:front http://localhost:3000 test:cypress-run",
     "test:full": "npm run test:unit-n-integration && npm run test:e2e",
     "test:full-cov": "npm run test:unit-n-integration-cov && npm run test:e2e",
     "test:codecov": "echo \"NOT SET UP!\""
@@ -40,7 +40,7 @@
   "bugs": {
     "url": "https://github.com/vikidi/Homepages/issues"
   },
-  "homepage": "https://github.com/vikidi/Homepages#readme",
+  "homepage": "https://villesaarinen.me",
   "devDependencies": {
     "codecov": "3.8.1",
     "concurrently": "6.0.0",
