--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,9 @@
     "history": "5.0.0",
     "http-proxy-middleware": "1.0.6",
     "i18next": "19.9.2",
+    "i18next-chained-backend": "^2.1.0",
     "i18next-http-backend": "1.1.1",
+    "i18next-localstorage-backend": "^3.1.2",
     "prop-types": "15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
