--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,19 +11,18 @@
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.5",
     "@testing-library/user-event": "12.8.3",
-    "axios": "^0.21.1",
-    "classnames": "^2.2.6",
+    "axios": "0.21.1",
+    "classnames": "2.2.6",
     "eslint-plugin-cypress": "2.11.2",
     "gsap": "3.6.0",
     "history": "5.0.0",
-    "http-proxy-middleware": "1.0.6",
     "i18next": "19.9.2",
-    "i18next-chained-backend": "^2.1.0",
+    "i18next-chained-backend": "2.1.0",
     "i18next-http-backend": "1.1.1",
-    "i18next-localstorage-backend": "^3.1.2",
+    "i18next-localstorage-backend": "3.1.2",
     "prop-types": "15.7.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-i18next": "11.8.10",
     "react-loadingg": "1.7.2",
     "react-redux": "7.2.2",
@@ -33,7 +32,7 @@
     "react-typist": "2.0.5",
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.9",
-    "redux-form": "^8.3.7",
+    "redux-form": "8.3.7",
     "redux-thunk": "2.3.0",
     "three": "0.124.0",
     "web-vitals": "1.1.1"
