--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "description": "Ville Saarinen home page's frontend",
   "private": true,
   "dependencies": {
+    "@airbrake/browser": "^2.1.4",
     "@material-ui/core": "4.11.3",
     "@material-ui/icons": "4.11.2",
     "@react-three/cannon": "0.6.1",
