--- a/backend/package.json
+++ b/backend/package.json
@@ -42,6 +42,8 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "pm2": "^4.5.3"
+    "pm2": "^4.5.3",
+    "winston": "^3.3.3",
+    "winston-loggly-bulk": "^3.2.1"
   }
 }
