--- a/backend/package.json
+++ b/backend/package.json
@@ -44,6 +44,6 @@
     "passport-local": "^1.0.0",
     "pm2": "^4.5.3",
     "winston": "^3.3.3",
-    "winston-loggly-bulk": "^3.2.1"
+    "winston-logzio": "^5.1.2"
   }
 }
