Init Redis DB for rate limiting

--- a/backend/.env.dist
+++ b/backend/.env.dist
@@ -1,5 +1,6 @@
 PORT=
 SECRET=
+
 MONGO_URL=
 MONGO_PORT=
 MONGO_USERNAME=
@@ -8,5 +9,11 @@ MONGO_AUTH_SOURCE=
 MONGO_PROD_DB=
 MONGO_DEV_DB=
 MONGO_TEST_DB=
+
+REDIS_PORT=
+REDIS_URL=
+REDIS_PASSWORD=
+REDIS_USERNAME=
+
 LOGZIO_TOKEN=
 LOGZIO_DOMAIN=
