--- a/.github/workflows/fullTest.yml
+++ b/.github/workflows/fullTest.yml
@@ -18,6 +18,7 @@ jobs:
       matrix:
         node-version: [14.x]
         mongodb-version: [4.4]
+        redis-version: [6]
 
     steps:
     - name: Git checkout
@@ -32,6 +33,11 @@ jobs:
       uses: supercharge/mongodb-github-action@1.3.0
       with:
         mongodb-version: ${{ matrix.mongodb-version }}
+
+    - name: Start Redis
+      uses: supercharge/redis-github-action@1.2.0
+      with:
+        redis-version: ${{ matrix.redis-version }}
 
     - run: npm ci
     - run: npm run install:back
@@ -49,3 +55,5 @@ jobs:
       MONGO_PORT: ${{ secrets.MONGO_PORT }}
       MONGO_URL: ${{ secrets.MONGO_URL }}
       MONGO_TEST_DB: ${{ secrets.MONGO_TEST_DB }}
+      REDIS_PORT: ${{ secrets.REDIS_PORT }}
+      REDIS_URL: ${{ secrets.REDIS_URL }}
