Manua workflow trigger

--- a/.github/workflows/fullTest.yml
+++ b/.github/workflows/fullTest.yml
@@ -4,6 +4,10 @@
 name: Full Test
 
 on:
+  workflow_dispatch:
+    inputs:
+      tags:
+          description: 'Test scenario tags'
   push:
     branches: [ main ]
   pull_request:
