--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -24,6 +24,7 @@ cypress/screenshots
 .env.development.local
 .env.test.local
 .env.production.local
+.env.docker.dev
 
 npm-debug.log*
 yarn-debug.log*
