--- a/backend/package.json
+++ b/backend/package.json
@@ -46,8 +46,6 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pm2": "^4.5.3",
-    "rate-limit-redis": "^2.1.0",
-    "winston": "^3.3.3",
-    "winston-logzio": "^5.1.2"
+    "rate-limit-redis": "^2.1.0"
   }
 }
