--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,4 +4,33 @@ version: "3.9"
 
 services:
 
-networks:
+  nginx:
+    image: nginx:1.21.3-alpine
+    restart: unless-stopped
+    ports:
+      - 80:80
+      - 443:443
+    expose:
+      - "80"
+      - "443"
+    volumes:
+      - ./etc/letsencrypt:/etc/letsencrypt
+      - ./nginx/nginx.conf.dev/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/conf.d/:/etc/nginx/conf.d/
+      - ./nginx/error.log:/etc/nginx/error_log.log
+      - ./nginx/cache/:/etc/nginx/cache/
+    networks:
+      - devnetwork
+
+    mongo:
+      env_file: 
+        - ./database/mongo/.env
+
+    backend:
+      build:
+        context: ./backend
+        dockerfile: Dockerfile
+      env_file: 
+        - ./backend/.env
+      command:
+        pm2-runtime start ecosystem.config.js --env production
