--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,30 +7,29 @@ services:
   mongo:
     image: mongo:4.4.6
     restart: unless-stopped
-    ports:
-      - 27017:27017
+    expose:
+      - "27017"
     networks:
       - devnetwork
 
   redis:
-    image: redis:6.2.3
+    image: redis:6.2.6-alpine
     restart: unless-stopped
-    ports:
-      - "6379:6379"
+    expose:
+      - "6379"
+    # Persistent data volume might be worth to consider
+    # Not really needed for current use cases and produces more load on server
     networks:
       - devnetwork
 
   backend:
     image: backend-api
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
     restart: unless-stopped
     depends_on:
       - mongo
       - redis
-    ports:
-      - 8080:8080
+    expose:
+      - "8080"
     volumes:
       - /home/app/node_modules
       - ./backend:/home/app
