--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     expose:
       - "8080"
     volumes:
-      - /home/app/node_modules
+      - ./backend/node_modules:/home/app/node_modules
       - ./backend:/home/app
     networks:
       - devnetwork
