--- a/backend/package.json
+++ b/backend/package.json
@@ -24,28 +24,29 @@
     "supertest": "6.1.3"
   },
   "dependencies": {
-    "@airbrake/node": "^2.1.3",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-async-errors": "^3.1.1",
-    "express-mongo-sanitize": "^2.0.0",
-    "express-rate-limit": "^5.2.6",
-    "express-sanitizer": "^1.0.5",
-    "express-slow-down": "^1.4.0",
-    "helmet": "^4.3.1",
+    "@airbrake/node": "2.1.3",
+    "bcryptjs": "2.4.3",
+    "cors": "2.8.5",
+    "dotenv": "8.2.0",
+    "express": "4.17.1",
+    "express-async-errors": "3.1.1",
+    "express-mongo-sanitize": "2.0.0",
+    "express-rate-limit": "5.2.6",
+    "express-sanitizer": "1.0.5",
+    "express-session": "1.17.2",
+    "express-slow-down": "1.4.0",
+    "express-visitor-counter": "1.3.1",
+    "helmet": "4.3.1",
     "http": "0.0.1-security",
-    "ioredis": "^4.27.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.8",
-    "mongoose-unique-validator": "^2.0.3",
-    "morgan": "^1.10.0",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "pm2": "^4.5.3",
-    "rate-limit-redis": "^2.1.0"
+    "ioredis": "4.27.2",
+    "jsonwebtoken": "8.5.1",
+    "mongoose": "5.10.8",
+    "mongoose-unique-validator": "2.0.3",
+    "morgan": "1.10.0",
+    "passport": "0.4.1",
+    "passport-jwt": "4.0.0",
+    "passport-local": "1.0.0",
+    "pm2": "4.5.3",
+    "rate-limit-redis": "2.1.0"
   }
 }
