--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-redux": "7.2.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.2",
+    "react-social-icons": "^5.6.1",
     "react-three-fiber": "5.3.18",
     "react-typist": "2.0.5",
     "redux": "4.0.5",
