Remove everything making overhead, add Auth0

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,7 @@ FROM node:14
 WORKDIR /home/app
 COPY ./package*.json ./
 
-RUN npm install --proguction
+RUN npm install --production
 RUN npm install pm2 -g
 
 COPY ./ ./
