--- a/backend/package.json
+++ b/backend/package.json
@@ -7,35 +7,28 @@
     "start:prod": "cross-env NODE_ENV=production pm2 start index.js",
     "start:prod-test": "cross-env NODE_ENV=production nodemon index.js",
     "start:dev": "cross-env NODE_ENV=development nodemon index.js",
-    "start:test": "cross-env NODE_ENV=test RESET_DB=true nodemon index.js",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "test": "cross-env NODE_ENV=test jest --verbose --runInBand --forceExit --detectOpenHandles",
-    "test:coverage": "rm -rf coverage && mkdir coverage && cross-env NODE_ENV=test jest --coverage --verbose --runInBand --forceExit --detectOpenHandles"
+    "lint:fix": "eslint . --fix"
   },
   "author": "Ville Saarinen",
   "license": "MIT",
   "devDependencies": {
     "cross-env": "7.0.3",
     "eslint": "7.22.0",
-    "jest": "26.6.3",
-    "jest-extended": "0.11.5",
-    "nodemon": "2.0.7",
-    "supertest": "6.1.3"
+    "nodemon": "2.0.7"
   },
   "dependencies": {
     "@airbrake/node": "2.1.3",
-    "bcryptjs": "2.4.3",
     "cors": "2.8.5",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-async-errors": "3.1.1",
     "express-mongo-sanitize": "2.0.0",
+    "express-oauth2-jwt-bearer": "^1.0.1",
     "express-rate-limit": "5.2.6",
     "express-sanitizer": "1.0.5",
     "express-session": "1.17.2",
     "express-slow-down": "1.4.0",
-    "express-visitor-counter": "1.3.1",
     "helmet": "4.3.1",
     "http": "0.0.1-security",
     "ioredis": "4.27.2",
@@ -43,9 +36,6 @@
     "mongoose": "5.10.8",
     "mongoose-unique-validator": "2.0.3",
     "morgan": "1.10.0",
-    "passport": "0.4.1",
-    "passport-jwt": "4.0.0",
-    "passport-local": "1.0.0",
     "pm2": "4.5.3",
     "rate-limit-redis": "2.1.0"
   }
