--- a/frontend/.env.dist
+++ b/frontend/.env.dist
@@ -1,3 +1,5 @@
 REACT_APP_VERSION=
-REACT_APP_AIRBRAKE_ID=
-REACT_APP_AIRBRAKE_KEY=
+
+REACT_APP_AUTH_DOMAIN=
+REACT_APP_AUTH_CLIENT_ID=
+REACT_APP_AUTH_AUDIENCE=
