--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,17 +4,11 @@
   "description": "Ville Saarinen home page's frontend",
   "private": true,
   "dependencies": {
-    "@airbrake/browser": "^2.1.4",
+    "@auth0/auth0-react": "^1.8.0",
     "@material-ui/core": "4.11.3",
     "@material-ui/icons": "4.11.2",
-    "@react-three/cannon": "0.6.1",
-    "@react-three/drei": "3.11.0",
-    "@testing-library/jest-dom": "5.11.9",
-    "@testing-library/react": "11.2.5",
-    "@testing-library/user-event": "12.8.3",
     "axios": "0.21.1",
     "classnames": "2.2.6",
-    "eslint-plugin-cypress": "2.11.2",
     "gsap": "3.6.0",
     "history": "5.0.0",
     "i18next": "19.9.2",
@@ -30,30 +24,21 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.2",
     "react-social-icons": "^5.6.1",
-    "react-three-fiber": "5.3.18",
     "react-typist": "2.0.5",
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.9",
     "redux-form": "8.3.7",
     "redux-thunk": "2.3.0",
-    "three": "0.124.0",
     "web-vitals": "1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "cross-env INLINE_RUNTIME_CHUNK=false react-scripts build",
-    "eject": "react-scripts eject",
-    "styleguidist:server": "cross-env FAST_REFRESH=false styleguidist server",
-    "styleguidist:build": "npx styleguidist build",
-    "test": "cross-env CI=true react-scripts test",
-    "test:coverage": "rm -rf ./coverage && mkdir coverage && cross-env CI=true react-scripts test \"--coverage\"",
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run --config video=false"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -69,8 +54,6 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "7.0.3",
-    "cypress": "6.6.0",
-    "react-styleguidist": "11.1.5"
+    "cross-env": "7.0.3"
   }
 }
